# deeparch_cicd

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pipeline.yml  test-pipeline.yml
.agents/skills/pipelight-sync/: SKILL.md
.claude/: settings.local.json
.claude/skills/pipelight-sync/: SKILL.md
.trae/skills/pipelight-sync/: SKILL.md
docs/: README.md  architecture.md  decisions.md  dev-environment.md  pipelight-presentation.pptx  pipelight-skill-protocol.md  vision.md
docs/intro/: pipelight-intro-light.html  pipelight-intro.html  pipelight-intro.md
docs/superpowers/plans/: 2026-04-03-ai-native-cicd-plan.md  2026-04-03-step-strategy-architecture.md  2026-04-04-realtime-output.md  2026-04-07-stepdef-trait-refactoring.md  (+5 more)
examples/vue-cli-pipeline-demo/: .gitignore  README.md  package-lock.json  package.json  pipeline.yml
global-skills/pipelight-run/: SKILL.md
global-skills/trae-rules/: pipelight-run.md
skill-memory/: feedback_pipelight_callback_dispatch.md
src/: main.rs
src/ci/: mod.rs
src/cli/: mod.rs
src/detector/: go.rs  gradle.rs  maven.rs  mod.rs  node.rs  python.rs  rust_project.rs
src/executor/: mod.rs
src/output/: json.rs  mod.rs  plain.rs  tty.rs
src/pipeline/: mod.rs
src/pipeline_gen/: mod.rs
src/run_state/: mod.rs
src/scheduler/: mod.rs
src/strategy/: mod.rs
tests/: cli_output_test.rs  integration_test.rs  json_output_test.rs  scenario_test.rs
tests/fixtures/: allow-failure.yml  failure.yml  multi-step-skip.yml  parallel-sibling-abort.yml  retryable.yml  success.yml
tools/: gen_ppt.py
(+131 files in other folders)
